@@ -19,7 +19,8 @@
 
 package de.frachtwerk.essencium.backend.security;
 
-import de.frachtwerk.essencium.backend.model.dto.JwtRoleRights;
+import de.frachtwerk.essencium.backend.model.dto.RightGrantedAuthority;
+import de.frachtwerk.essencium.backend.model.dto.RoleGrantedAuthority;
 import de.frachtwerk.essencium.backend.service.JwtTokenService;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.security.SignatureException;
@@ -28,10 +29,8 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Collection;
-import java.util.Collections;
+import java.io.Serializable;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -42,13 +41,13 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.AuthenticationCredentialsNotFoundException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.web.authentication.AbstractAuthenticationProcessingFilter;
 import org.springframework.security.web.authentication.session.SessionAuthenticationException;
 import org.springframework.security.web.util.matcher.RequestMatcher;
 
 /** Filter to extract a JWT Bearer token from the request's Authorization header and verify it */
-public class JwtTokenAuthenticationFilter extends AbstractAuthenticationProcessingFilter {
+public class JwtTokenAuthenticationFilter<ID extends Serializable>
+    extends AbstractAuthenticationProcessingFilter {
 
   public static final String TOKEN_QUERY_PARAM = "t";
   private static final Pattern headerParamRegex =
@@ -89,18 +88,16 @@ public class JwtTokenAuthenticationFilter extends AbstractAuthenticationProcessi
       Claims claims = jwtTokenService.verifyToken(token);
 
       @SuppressWarnings("unchecked")
-      List<Map<String, Object>> roleMaps =
-          Optional.ofNullable(claims.get(JwtTokenService.CLAIM_ROLES_RIGHTS, List.class))
-              .orElse(Collections.emptyList());
+      List<String> rolesRaw = claims.get(JwtTokenService.CLAIM_ROLES, List.class);
+      List<RoleGrantedAuthority> roles =
+          rolesRaw == null ? List.of() : rolesRaw.stream().map(RoleGrantedAuthority::new).toList();
 
-      List<JwtRoleRights> roleRights =
-          roleMaps.stream().map(JwtAuthenticationToken::mapToRoleWithRights).toList();
-
-      Collection<? extends GrantedAuthority> authorities =
-          JwtAuthenticationToken.buildAuthorities(roleRights);
-
-      return new JwtAuthenticationToken(claims, roleRights);
-
+      List<String> rightsRaw = claims.get(JwtTokenService.CLAIM_RIGHTS, List.class);
+      List<RightGrantedAuthority> rights =
+          rightsRaw == null
+              ? List.of()
+              : rightsRaw.stream().map(RightGrantedAuthority::new).toList();
+      return new JwtAuthenticationToken<ID>(claims, roles, rights);
     } catch (SessionAuthenticationException e) {
       throw new BadCredentialsException(e.getMessage());
     } catch (SignatureException e) {
